--- a/assets/css/jkstyle.css
+++ b/assets/css/jkstyle.css
@@ -1,13 +1,20 @@
 body {
-    background-color:#222222;
+    background-color:lightgray;
 }
 /* page's navigation bar */
 .navbar {
-    background-color: #ffb250;
+    background-color: lightgray;
     font-family: Eczar, serif;
     font-size: 120%;
     color: #222222;
     padding: 15px;
+}
+.small {
+    background-color: lightgray;
+    font-family: Eczar, serif;
+    font-size: 50%;
+    color: #222222;
+    padding: 0px;
 }
 .navbar > .centra {
     max-width: 900px;
@@ -18,7 +25,7 @@ body {
 }
 /* page intro & quotes */
 .intro {
-    background-color: #222222;
+    background-color: gray;
     padding: 30px 10px 10px 10px;
     text-align: center;
 }
@@ -39,7 +46,7 @@ body {
 }
 /* sections */
 .domain {
-    background-color: #00c2c7;
+    background-color: lightgrey;
     padding: 15px 15px 10px 15px;
     text-align: center;
     font-size: 90%;
@@ -52,7 +59,7 @@ body {
     margin: 0 auto;
 }
 .titlebar {
-    background-color: #00c2c7;
+    background-color: lightgray;
     padding: 15px 15px 10px 35px;
     text-align: left;
     font-family: Montserrat, sans-serif;
@@ -89,7 +96,7 @@ a:hover {
 }
 /* mainbody & body */
 .main {
-    background-color:#636363;
+    background-color:gray;
     color: #f0f2f5;
     font-family: Montserrat, sans-serif;
     font-size: 90%;
